--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         background-attachment: fixed; /* Background tetap saat scroll */
       }
       .tab-active {
-        border-color: #ff6b00;
-        background-color: #ff6b00;
+        border-color: #afd8ff;
+        background-color: #afd8ff;
         color: white;
       }
       .section {
@@ -139,7 +139,6 @@
             >Tentang Kami</a
           >
           <a href="#blog" class="text-gray-600 hover:text-sky-600">Blog</a>
-          <a href="#kontak" class="text-gray-600 hover:text-sky-600">Kontak</a>
         </div>
         <a
           href="#form"
@@ -191,9 +190,6 @@
           >Tentang Kami</a
         >
         <a href="#blog" class="block text-gray-600 hover:text-sky-600">Blog</a>
-        <a href="#kontak" class="block text-gray-600 hover:text-sky-600"
-          >Kontak</a
-        >
         <a
           href="#form"
           class="block bg-sky-600 text-white text-center mt-2 px-5 py-2 rounded-full hover:bg-sky-700 transition-colors"
@@ -230,7 +226,7 @@
         <!-- Menu Cepat Program -->
         <div class="py-16 bg-white">
           <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center text-slate-900 mb-10">
+            <h2 class="text-3xl font-bold text-center text-sky-900 mb-10">
               Pilih Program Unggulan Kami
             </h2>
             <div
@@ -365,7 +361,7 @@
         <div class="py-16">
           <div class="container mx-auto px-6">
             <h2 
-              class="text-3xl font-bold text-center text-slate-900 mb-10"
+              class="text-3xl font-bold text-center mb-10 text-sky-900"
               data-aos="fade-up"
               data-aos-duration="800"
             >
@@ -477,7 +473,7 @@
         <!-- Highlight Jenjang -->
         <div class="py-16 bg-white">
           <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center text-slate-900 mb-10">
+            <h2 class="text-3xl font-bold text-center text-sky-900 mb-10">
               Tersedia untuk Semua Jenjang
             </h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
@@ -569,10 +565,86 @@
           </div>
         </div>
 
+        <!-- FAQ Section -->
+  <section id="FAQ" class="container mx-auto px-6 py-16">
+    <div class="max-w-3xl mx-auto divide-y divide-gray-200">
+      <h2 class="text-3xl font-bold text-center mb-10 text-sky-900">
+              Apa Yang Ditanyakan ?
+            </h2>
+
+      <!-- FAQ Item -->
+      <div class="faq-item py-4" data-aos="fade-up">
+        <button class="w-full flex justify-between items-center text-left font-semibold text-lg focus:outline-none">
+          <span>1. Apa saja kursus yang tersedia?</span>
+          <svg class="w-5 h-5 transition-transform transform" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
+          </svg>
+        </button>
+        <div class="faq-content mt-2 hidden text-gray-700">
+          Kami menyediakan kursus <strong>Pemrograman Dasar</strong>, <strong>Microsoft Office</strong>, dan <strong>Desain</strong>. 
+          Setiap kursus dirancang agar mudah dipahami pemula maupun profesional.
+        </div>
+      </div>
+
+      <div class="faq-item py-4" data-aos="fade-up" data-aos-delay="100">
+        <button class="w-full flex justify-between items-center text-left font-semibold text-lg focus:outline-none">
+          <span>2. Apakah kursus ini online atau offline?</span>
+          <svg class="w-5 h-5 transition-transform transform" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
+          </svg>
+        </button>
+        <div class="faq-content mt-2 hidden text-gray-700">
+          Kursus kami bersifat <strong>offline</strong> dengan fasilitas komputer lengkap, 
+          namun juga tersedia versi <strong>online</strong> bagi peserta luar kota.
+        </div>
+      </div>
+
+      <div class="faq-item py-4" data-aos="fade-up" data-aos-delay="200">
+        <button class="w-full flex justify-between items-center text-left font-semibold text-lg focus:outline-none">
+          <span>3. Apakah ada sertifikat setelah menyelesaikan kursus?</span>
+          <svg class="w-5 h-5 transition-transform transform" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
+          </svg>
+        </button>
+        <div class="faq-content mt-2 hidden text-gray-700">
+          Ya, setiap peserta yang menyelesaikan kursus akan mendapatkan 
+          <strong>sertifikat resmi</strong> yang bisa digunakan untuk portofolio dan karier.
+        </div>
+      </div>
+
+      <div class="faq-item py-4" data-aos="fade-up" data-aos-delay="300">
+        <button class="w-full flex justify-between items-center text-left font-semibold text-lg focus:outline-none">
+          <span>4. Bagaimana cara mendaftar?</span>
+          <svg class="w-5 h-5 transition-transform transform" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
+          </svg>
+        </button>
+        <div class="faq-content mt-2 hidden text-gray-700">
+          Anda dapat mendaftar melalui tombol <a href="#form" class="text-blue-600 underline hover:text-blue-800">Daftar</a> 
+          atau datang langsung ke lokasi kami. Tim kami siap membantu proses pendaftaran.
+        </div>
+      </div>
+
+      <div class="faq-item py-4" data-aos="fade-up" data-aos-delay="400">
+        <button class="w-full flex justify-between items-center text-left font-semibold text-lg focus:outline-none">
+          <span>5. Apakah ada program diskon atau beasiswa?</span>
+          <svg class="w-5 h-5 transition-transform transform" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
+          </svg>
+        </button>
+        <div class="faq-content mt-2 hidden text-gray-700">
+          Kami memiliki program beasiswa dan potongan harga untuk siswa berprestasi. 
+          Ikuti media sosial kami untuk pengumuman terbaru.
+        </div>
+      </div>
+
+    </div>
+  </section>
+
         <!-- Testimoni -->
         <div class="py-16">
           <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center text-slate-900 mb-10">
+            <h2 class="text-3xl font-bold text-center text-sky-900 mb-10">
               Apa Kata Alumni Kami?
             </h2>
             <div class="grid md:grid-cols-2 gap-8">
@@ -702,18 +774,18 @@
     <!-- Grid utama -->
     <div class="grid lg:grid-cols-3 gap-10 text-left">
       <!-- Profil -->
-      <div class="bg-white rounded-2xl shadow-lg p-8 hover:shadow-xl transition">
+      <div class="bg-white rounded-2xl shadow-lg p-8 hover:shadow-xl transition text-center">
         <h3 class="text-2xl font-semibold text-indigo-700 mb-3">Profil Kami</h3>
         <p class="text-gray-700 leading-relaxed">
-          KursusPro berdiri untuk menjembatani kebutuhan dunia kerja dengan kemampuan nyata para peserta. 
+          RZF berdiri untuk menjembatani kebutuhan dunia kerja dengan kemampuan nyata para peserta. 
           Kami menyediakan pelatihan berbasis proyek dan praktik langsung untuk memastikan kompetensi yang teruji di bidang teknologi, desain, dan bisnis digital.
         </p>
       </div>
 
       <!-- Visi & Misi -->
       <div class="bg-white rounded-2xl shadow-lg p-8 hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold text-indigo-700 mb-3">Visi & Misi</h3>
-        <p class="text-gray-700 mb-4">
+        <h3 class="text-2xl font-semibold text-indigo-700 mb-3 text-center">Visi & Misi</h3>
+        <p class="text-gray-700 mb-4 text-center">
           Visi kami adalah menjadi lembaga pelatihan terbaik yang mencetak sumber daya manusia kreatif, adaptif, dan profesional.
         </p>
         <ul class="list-disc list-inside text-gray-700 space-y-2">
@@ -726,8 +798,8 @@
 
       <!-- Tim -->
       <div class="bg-white rounded-2xl shadow-lg p-8 hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold text-indigo-700 mb-5">Tim Pengajar</h3>
-        <div class="space-y-5">
+        <h3 class="text-2xl font-semibold text-indigo-700 mb-5 text-center">Tim Pengajar</h3>
+        <div class="space-y-5 items-center">
           <div class="flex items-center gap-4">
             <img src="https://randomuser.me/api/portraits/men/32.jpg" class="w-14 h-14 rounded-full object-cover shadow">
             <div>
@@ -925,7 +997,7 @@
                 <a href="#" class="text-gray-400 hover:text-white">FAQ</a>
               </li>
               <li>
-                <a href="#kontak" class="text-gray-400 hover:text-white"
+                <a href="https://wa.me/6283166819166" class="text-gray-400 hover:text-white"
                   >Kontak Kami</a
                 >
               </li>
@@ -960,7 +1032,23 @@
       gsap.from('.navbar', {duration: 1.5, y: '-100%', opacity: 0, ease: 'bounce'});
       gsap.from('.tombol-pilih-daftar', {duration: 1, x: -50, opacity: 0, delay : 0.5});
     </script> -->
-    
+    <script>
+    const faqs = document.querySelectorAll('.faq-item');
+    faqs.forEach(item => {
+      const button = item.querySelector('button');
+      const content = item.querySelector('.faq-content');
+      const icon = item.querySelector('svg');
+      button.addEventListener('click', () => {
+        const isOpen = !content.classList.contains('hidden');
+        document.querySelectorAll('.faq-content').forEach(c => c.classList.add('hidden'));
+        document.querySelectorAll('.faq-item svg').forEach(i => i.classList.remove('rotate-180'));
+        if (!isOpen) {
+          content.classList.remove('hidden');
+          icon.classList.add('rotate-180');
+        }
+      });
+    });
+  </script>
     
   </body>
 </html>
