--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
           </div>
           <div>
             <h3 class="font-semibold mb-4">Hubungi Kami</h3>
-            <p class="text-gray-400">Email: kontak@rzfacademy.com</p>
+            <p class="text-gray-400">Email: rzfacademy@gmail.com</p>
             <p class="text-gray-400">WhatsApp: +62 812-3456-7890</p>
           </div>
         </div>
