--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RZF Academy - Kursus Skill Digital untuk Semua Usia</title>
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="./src/output.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -150,19 +150,19 @@
         <!-- Hero Banner -->
         <div class="hero-bg text-white">
           <div
-            class="bg-slate-900 bg-opacity-60 min-h-[60vh] flex items-center"
+            class="bg-slate-900 bg-opacity-60 min-h-[100vh] flex items-center"
           >
             <div class="container mx-auto px-6 text-center">
               <h1 
                 class="text-4xl md:text-6xl font-bold font-heading mb-4"
-                data-aos="fade-down"
+                data-aos="fade-in"
                 data-aos-duration="1000"
               >
                 Belajar Digital Skill untuk Semua Usia
               </h1>
               <p 
                 class="text-lg md:text-xl mb-8 max-w-3xl mx-auto"
-                data-aos="fade-up"
+                data-aos="fade-in"
                 data-aos-duration="1000"
                 data-aos-delay="200"
               >
@@ -801,7 +801,7 @@
               data-aos-delay="200"
             >
               <h3 class="text-2xl font-semibold text-indigo-700 mb-3">Profil Kami</h3>
-              <p class="text-gray-700 leading-relaxed">
+              <p class="text-gray-700 leading-relaxed text-justify">
                 RZF berdiri untuk menjembatani kebutuhan dunia kerja dengan kemampuan nyata para peserta. 
                 Kami menyediakan pelatihan berbasis proyek dan praktik langsung untuk memastikan kompetensi yang teruji di bidang teknologi, desain, dan bisnis digital.
               </p>
@@ -814,7 +814,7 @@
               data-aos-delay="300"
             >
               <h3 class="text-2xl font-semibold text-indigo-700 mb-3 text-center">Visi & Misi</h3>
-              <p class="text-gray-700 mb-4 text-center">
+              <p class="text-gray-700 mb-4 text-justify">
                 Visi kami adalah menjadi lembaga pelatihan terbaik yang mencetak sumber daya manusia kreatif, adaptif, dan profesional.
               </p>
               <ul class="list-disc list-inside text-gray-700 space-y-2">
@@ -834,23 +834,23 @@
               <h3 class="text-2xl font-semibold text-indigo-700 mb-5 text-center">Tim Pengajar</h3>
               <div class="space-y-5 items-center">
                 <div class="flex items-center gap-4">
-                  <img src="https://randomuser.me/api/portraits/men/32.jpg" class="w-14 h-14 rounded-full object-cover shadow">
+                  <img src="./img/pengajar/Agis.jpg" class="w-14 h-14 rounded-full object-cover shadow">
                   <div>
-                    <p class="font-semibold text-gray-800">Budi Santoso</p>
+                    <p class="font-semibold text-gray-800">Agistiana Nurohman</p>
                     <p class="text-sm text-gray-500">Instruktur Pemrograman</p>
                   </div>
                 </div>
                 <div class="flex items-center gap-4">
-                  <img src="https://randomuser.me/api/portraits/women/44.jpg" class="w-14 h-14 rounded-full object-cover shadow">
+                  <img src="./img/pengajar/Taufik.jpg" class="w-14 h-14 rounded-full object-cover shadow">
                   <div>
-                    <p class="font-semibold text-gray-800">Dewi Rahmawati</p>
+                    <p class="font-semibold text-gray-800">Muhammad Taufik</p>
                     <p class="text-sm text-gray-500">Instruktur Desain Grafis</p>
                   </div>
                 </div>
                 <div class="flex items-center gap-4">
-                  <img src="https://randomuser.me/api/portraits/men/46.jpg" class="w-14 h-14 rounded-full object-cover shadow">
+                  <img src="./img/pengajar/irsad.PNG" class="w-14 h-14 rounded-full object-cover shadow">
                   <div>
-                    <p class="font-semibold text-gray-800">Andi Wijaya</p>
+                    <p class="font-semibold text-gray-800">M. Irsyad Satria</p>
                     <p class="text-sm text-gray-500">Instruktur Digital Marketing</p>
                   </div>
                 </div>
