--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RZF Academy - Kursus Skill Digital untuk Semua Usia</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./src/output.css" rel="stylesheet">
+  
+    <link href="./css/output.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -150,7 +150,7 @@
         <!-- Hero Banner -->
         <div class="hero-bg text-white">
           <div
-            class="bg-slate-900 bg-opacity-60 min-h-[100vh] flex items-center"
+            class="bg-slate-900 opacity-80 min-h-[80vh] flex items-center"
           >
             <div class="container mx-auto px-6 text-center">
               <h1 
