--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RZF Academy - Kursus Skill Digital untuk Semua Usia</title>
-  
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon">
     <link href="./css/output.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
